--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v3
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/setup-python@v4
         name: Install Python
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
       - name: Prepare compiler environment for Windows
         if: runner.os == 'Windows'
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build wheels
         env:
-          CIBW_BUILD: cp36-* cp37-* cp38-* cp39-* cp310-* cp311-*
+          CIBW_BUILD: cp38-* cp39-* cp310-* cp311-*
           CIBW_ARCHS_MACOS: "universal2"
           CIBW_ARCHS_LINUX: "auto64"
           CIBW_ARCHS_WINDOWS: "auto64"
@@ -84,7 +84,7 @@ jobs:
 
   create_release:
     needs: [build_sdist, cibw_wheels]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Get version
@@ -98,7 +98,7 @@ jobs:
       - uses: actions/setup-python@v4
         name: Install Python
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
       # download all artifacts to project dir
       - uses: actions/download-artifact@v2
