--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
 
     steps:
       - uses: actions/checkout@v3
@@ -25,12 +25,6 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Prepare compiler environment for Windows
-        if: runner.os == 'Windows'
-        uses: ilammy/msvc-dev-cmd@v1
-        with:
-          arch: amd64
-
       - name: Install cibuildwheel
         run: |
           python -m pip install --upgrade pip
@@ -38,23 +32,13 @@ jobs:
 
       - name: Build wheels
         env:
-          CIBW_BUILD: cp36-* cp37-* cp38-* cp39-* cp310-* cp311-*
-          CIBW_ARCHS_MACOS: "universal2"
+          CIBW_BUILD: cp38-* cp39-* cp310-* cp311-*
           CIBW_ARCHS_LINUX: "auto64"
-          CIBW_ARCHS_WINDOWS: "auto64"
           CIBW_SKIP: "*musllinux*"
           CIBW_BEFORE_ALL_LINUX: >
             yum -y -q --enablerepo=extras install epel-release
             && yum install -y re2-devel ninja-build
           CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel show {wheel} && auditwheel repair -w {dest_dir} {wheel}"
-          CIBW_BEFORE_ALL_MACOS: >
-            brew install re2 pybind11 ninja
-          CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET=10.15
-          CIBW_REPAIR_WHEEL_COMMAND_MACOS: "pip uninstall -y delocate && pip install git+https://github.com/Chia-Network/delocate.git && delocate-listdeps {wheel} && delocate-wheel -w {dest_dir} -v {wheel}"
-          CIBW_BEFORE_ALL_WINDOWS: >
-            vcpkg install re2:x64-windows
-            && vcpkg integrate install
-          CIBW_ENVIRONMENT_WINDOWS: 'CMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake'
           CIBW_TEST_COMMAND: python -c "import re2"
         run: |
           python -m cibuildwheel --output-dir wheelhouse
@@ -72,7 +56,7 @@ jobs:
       - uses: actions/setup-python@v4
         name: Install Python
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
       - name: Build sdist
         run: |
@@ -89,7 +73,7 @@ jobs:
       run:
         shell: bash
     name: Check artifacts are correct
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v2
