--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
 
     steps:
       - uses: actions/checkout@v3
@@ -24,12 +24,6 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Prepare compiler environment for Windows
-        if: runner.os == 'Windows'
-        uses: ilammy/msvc-dev-cmd@v1
-        with:
-          arch: amd64
-
       - name: Install cibuildwheel
         run: |
           python -m pip install --upgrade pip
@@ -38,22 +32,12 @@ jobs:
       - name: Build wheels
         env:
           CIBW_BUILD: cp38-* cp39-* cp310-* cp311-*
-          CIBW_ARCHS_MACOS: "universal2"
           CIBW_ARCHS_LINUX: "auto64"
-          CIBW_ARCHS_WINDOWS: "auto64"
           CIBW_SKIP: "*musllinux*"
           CIBW_BEFORE_ALL_LINUX: >
             yum -y -q --enablerepo=extras install epel-release
             && yum install -y re2-devel ninja-build
           CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel show {wheel} && auditwheel repair -w {dest_dir} {wheel}"
-          CIBW_BEFORE_ALL_MACOS: >
-            brew install re2 pybind11 ninja
-          CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET=10.15
-          CIBW_REPAIR_WHEEL_COMMAND_MACOS: "pip uninstall -y delocate && pip install git+https://github.com/Chia-Network/delocate.git && delocate-listdeps {wheel} && delocate-wheel -w {dest_dir} -v {wheel}"
-          CIBW_BEFORE_ALL_WINDOWS: >
-            vcpkg install re2:x64-windows
-            && vcpkg integrate install
-          CIBW_ENVIRONMENT_WINDOWS: 'CMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake'
           CIBW_TEST_COMMAND: python -c "import re2"
         run: |
           python -m cibuildwheel --output-dir wheelhouse
